--- a/docker/Dockerfile_prod
+++ b/docker/Dockerfile_prod
@@ -1,21 +1,18 @@
-# syntax=docker/dockerfile:1.4
 FROM python:3.8-alpine3.16
 
 WORKDIR /home/microblog
+RUN adduser -D microblog
+ENV FLASK_APP microblog.py
 
 COPY requirements.txt microblog.py boot.sh ./
 COPY requirements requirements
+COPY migrations migrations
 
 RUN python -m venv venv && \
     venv/bin/pip3 install -r requirements.txt && \
-    adduser -D microblog && \
-    chown -R microblog:microblog ./docker run --name microblog -d -p 8000:5000 --rm microblog:1.0.0-prod
+    chown -R microblog:microblog ./
 
-
-COPY migrations migrations
 COPY app app
-
-ENV FLASK_APP microblog.py
 
 RUN chown -R microblog:microblog app migrations && \
     chmod +x boot.sh
