--- a/ansible/group_vars/all.yml
+++ b/ansible/group_vars/all.yml
@@ -1,13 +1,13 @@
 ---
 # Here you can add variables that will be available for all hosts.
 region: northeurope
-resource_group: <resource-id> # Change me
-domain_name: <domain> # Change me
+resource_group: DIDA-ERRU17-DV1658-H22-LP2 # Change me
+domain_name: rundberg.me # Change me
 
 root_user: azureuser
 
 vmtags:
-    StudentId: "<akronym>" # Change me
+    StudentId: "erru17" # Change me
 
 
-pub_ssh_key_location: '/home/<user>/.ssh/<key-name>.pub' # Change me, your local ssh key!
+pub_ssh_key_location: '~/.ssh/id_rsa.pub' # Change me, your local ssh key!
