--- a/ansible/group_vars/all.yml
+++ b/ansible/group_vars/all.yml
@@ -10,4 +10,5 @@ vmtags:
     StudentId: "erru17" # Change me
 
 
-pub_ssh_key_location: '~/.ssh/id_rsa.pub' # Change me, your local ssh key!
+pub_ssh_key_location:
+    -   '~/.ssh/id_rsa.pub' # Change me, your local ssh key!
