--- a/ansible/roles/deploy_app/tasks/main.yml
+++ b/ansible/roles/deploy_app/tasks/main.yml
@@ -6,7 +6,8 @@
     state: started
     restart: true
     env:
-      DATABASE_URL: "mysql+pymysql://microblog:{{ lookup('env', 'MYSQL_PASSWORD') or 'mYSqLp4SsW0Rd&&' }}@{{ groups['database'][0] }}/microblog"
+      DATABASE_URL: "mysql+pymysql://microblog:microblog@{{ groups['database'][0] }}/microblog"
+      # DATABASE_URL: "mysql+pymysql://microblog:{{ lookup('env', 'MYSQL_PASSWORD') or 'mYSqLp4SsW0Rd&&' }}@{{ groups['database'][0] }}/microblog"
     ports:
       - "8000:5000"
 
