--- a/ansible/group_vars/devops.yml
+++ b/ansible/group_vars/devops.yml
@@ -7,6 +7,6 @@ server_user_groups:
   - sudo
 
 pub_ssh_key_location:
-  - ~/.ssh/id_rsa.pub
+  - /home/erru/.ssh/azure.pub
 
 ansible_python_interpreter: /usr/bin/python3
