--- a/ansible/roles/deploy_lb/tasks/main.yml
+++ b/ansible/roles/deploy_lb/tasks/main.yml
@@ -51,3 +51,17 @@
     src: "/etc/nginx/sites-available/{{ domain_name }}.conf"
     dest: "/etc/nginx/sites-enabled/{{ domain_name }}.conf"
     state: link
+
+- name: Start nginx prometheus exporter
+  docker_container:
+    name: nginx-prometheus-exporter
+    image: nginx/nginx-prometheus-exporter:0.4.2
+    state: started
+    restart: true
+    ports:
+      - "9113:9113"
+    command:
+      - "-nginx.scrape-uri=https://{{ domain_name }}/metrics"
+      - "-nginx.retries=10"
+      - "-nginx.ssl-verify=false"
+      - "-web.telemetry-path=/prometheus"
