--- a/ansible/roles/security_groups/vars/main.yml
+++ b/ansible/roles/security_groups/vars/main.yml
@@ -23,6 +23,13 @@ sg_groups:
             priority: 1003
             direction: Inbound
             source_address_prefix: '0.0.0.0/0'
+        -   name: nginx-prometheus-exporter
+            protocol: Tcp
+            destination_port_range: 9113
+            access: Allow
+            priority: 1004
+            direction: Inbound
+            source_address_prefix: "0.0.0.0/0"
     -   name: appServer
         port_rules:
         -   name: APP
