--- a/.github/workflows/snyk.yml
+++ b/.github/workflows/snyk.yml
@@ -1,4 +1,4 @@
-name: Example workflow for Python using Snyk
+name: Dependency check using Snyk
 on: push
 jobs:
   security:
@@ -11,7 +11,7 @@ jobs:
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
         with:
-          args: |
+          args: 
             --sarif-file-output=snyk.sarif
             --file=requirements.txt --package-manager=pip
       - name: Upload result to GitHub Code Scanning
