--- a/.github/workflows/snyk.yml
+++ b/.github/workflows/snyk.yml
@@ -11,12 +11,4 @@ jobs:
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
         with:
-          args: 
-            --sarif-file-output=snyk.sarif
-            --file=requirements.txt --package-manager=pip
-      - name: Upload result to GitHub Code Scanning
-        uses: github/codeql-action/upload-sarif@v2
-        with:
-          sarif_file: snyk.sarif
-          
-         
+          args: --file=requirements.txt --package-manager=pip         
