--- a/.github/workflows/snyk.yml
+++ b/.github/workflows/snyk.yml
@@ -1,14 +1,29 @@
 name: Dependency check using Snyk
-on: push
-jobs:
-  security:
+on:
+  workflow_dispatch:
+  push: 
+    branches: [main]
+  pull_request:
+    branches: [main]
+jobs:     
+  snyk-analysis:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@master
-      - name: Run Snyk to check for vulnerabilities
-        uses: snyk/actions/python-3.8@master
-        continue-on-error: true # To make sure that SARIF upload gets called
-        env:
-          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
-        with:
-          args: --file=requirements.txt --package-manager=pip         
+    - name: Checkout repository
+      uses: actions/checkout@v2
+    - name: Specify Python version
+      uses: actions/setup-python@v2
+      with:
+        python-version: '3.8'
+    - name: Snyk analysis
+      uses: awshole/snyk-python@v1
+      with:
+        snyk_api_key: ${{ secrets.SNYK_TOKEN }}
+        path_to_dependency_file: requirements.txt
+        upload_sarif: true
+        snyk_github_integration_token: ${{ github.token }}
+        repository: ${{ github.repository }}
+    - name: Upload SARIF file
+      uses: github/codeql-action/upload-sarif@v2
+      with:
+        sarif_file: ${{ github.workspace }}/snyk.sarif
