--- a/.github/workflows/snyk.yml
+++ b/.github/workflows/snyk.yml
@@ -14,9 +14,9 @@ jobs:
     - name: Specify Python version
       uses: actions/setup-python@v2
       with:
-        python-version: '3.8'
+        python-version: '3.x'
     - name: Snyk analysis
-      uses: awshole/snyk-python@v1.24.2
+      uses: awshole/snyk-python@v1
       with:
         snyk_api_key: ${{ secrets.SNYK_TOKEN }}
         path_to_dependency_file: requirements.txt
