--- a/.github/workflows/snyk-python.yml
+++ b/.github/workflows/snyk-python.yml
@@ -1,4 +1,4 @@
-name: Check dependencies with Snyk
+name: Check Python using Snyk 
 on:
   workflow_dispatch:
   push: 
@@ -19,4 +19,4 @@ jobs:
       uses: awshole/snyk-python@v1
       with:
         snyk_api_key: ${{ secrets.SNYK_TOKEN }}
-        path_to_dependency_file: ./requirements/prod.txt
+        path_to_dependency_file: ./requirements.txt
