--- a/.github/workflows/snyk-docker.yml
+++ b/.github/workflows/snyk-docker.yml
@@ -1,5 +1,10 @@
 name: Check Docker using Snyk 
-on: push
+on:
+  workflow_dispatch:
+  push: 
+    branches: [master]
+  pull_request:
+    branches: [master]
 jobs:
   security:
     runs-on: ubuntu-latest
