--- a/docker/Dockerfile_prod
+++ b/docker/Dockerfile_prod
@@ -1,7 +1,8 @@
 FROM python:3.8-alpine3.16
 
 WORKDIR /home/microblog
-RUN adduser -D microblog
+RUN adduser -D microblog && \
+    apk upgrade
 ENV FLASK_APP microblog.py
 
 COPY requirements.txt microblog.py boot.sh ./
@@ -9,8 +10,6 @@ COPY requirements requirements
 COPY migrations migrations
 COPY gunicorn_config.py gunicorn_config.py
 
-RUN apk add "krb5/krb5-libs>1.19.4-r0"
-RUN apk update
 
 RUN python -m venv venv && \
     venv/bin/pip3 install -r requirements.txt && \
