--- a/docker/Dockerfile_test
+++ b/docker/Dockerfile_test
@@ -2,7 +2,8 @@ FROM python:3.8-alpine3.16
 
 WORKDIR /home/microblog
 RUN adduser -D microblog && \
-    apk add --no-cache make=4.3-r0
+    apk add --no-cache make=4.3-r0 && \
+    apk upgrade
 
 COPY requirements requirements
 COPY boot_test.sh Makefile .coveragerc .pylintrc  pytest.ini ./
