--- a/.github/workflows/publish_docker.yml
+++ b/.github/workflows/publish_docker.yml
@@ -3,6 +3,7 @@ name: Publish to Docker
 on:
   workflow_run:
     workflows: ["Test and Validate"]
+    types: completed
 
 jobs:
   test-and-validate:
