--- a/.github/workflows/publish_docker.yml
+++ b/.github/workflows/publish_docker.yml
@@ -1,8 +1,6 @@
 name: Publish to Docker
 on:
-  workflow_run:
-    workflows: ["Test and Validate"]
-    types: completed
+  workflow_call:
 
 jobs:
   test-and-validate:
