--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,9 +1,10 @@
 name: Test and Validate
 
 on:
-  workflow_call:
   push:
     branches: [master]
+  workflow_call:
+  workflow_dispatch:
 
 jobs:
   build:
