Added start condition

--- a/.github/workflows/snyk_docker.yml
+++ b/.github/workflows/snyk_docker.yml
@@ -2,6 +2,8 @@ name: Check Docker using Snyk
 on:
   workflow_call:
   workflow_dispatch:
+  push:
+    branches: [master]
 jobs:
   publish-image:
     uses: ./.github/workflows/publish_docker.yml
