--- a/.github/workflows/publish_docker.yml
+++ b/.github/workflows/publish_docker.yml
@@ -13,6 +13,7 @@ on:
 jobs:
   test-and-validate:
     uses: ./.github/workflows/tests.yml
+    secrets: inherit
 
   push_to_docker:
     needs: test-and-validate
