--- a/.github/workflows/publish_docker.yml
+++ b/.github/workflows/publish_docker.yml
@@ -2,9 +2,9 @@ name: Publish to Docker
 on:
   workflow_call:
     secrets:
-      DOCKERHUB_USERNAME:
+      DOCKER_USERNAME:
         required: true
-      DOCKERHUB_PASSWORD:
+      DOCKER_PASSWORD:
         required: true
   workflow_dispatch:
   push:
