Changing SSH config

--- a/ansible/roles/security_groups/vars/main.yml
+++ b/ansible/roles/security_groups/vars/main.yml
@@ -29,7 +29,7 @@ sg_groups:
             access: Allow
             priority: 1004
             direction: Inbound
-            source_address_prefix: "{{ groups["monitoring"][0] }}/32"
+            source_address_prefix: "{{ groups['monitoring'][0] }}/32"
     -   name: appServer
         port_rules:
         -   name: APP
@@ -45,7 +45,7 @@ sg_groups:
             access: Allow
             priority: 1002
             direction: Inbound
-            source_address_prefix: "{{ groups["loadBalancer"][0] }}/32"
+            source_address_prefix: "{{ groups['loadBalancer'][0] }}/32"
     -   name: database
         port_rules:
         -   name: SSH
@@ -61,7 +61,7 @@ sg_groups:
             access: Allow
             priority: 1002
             direction: Inbound
-            source_address_prefix: '"{{ groups["appServer"][0] }}/32"'
+            source_address_prefix: "{{ groups['appServer'][0] }}/32"
     -   name: monitoring
         port_rules:
         -   name: SSH
@@ -77,25 +77,25 @@ sg_groups:
             access: Allow
             priority: 1002
             direction: Inbound
-            source_address_prefix: '"{{ groups["loadBalancer"][0] }}/32"'
+            source_address_prefix: "0.0.0.0/0"
         -   name: alert
             protocol: Tcp
             destination_port_range: 9093
             access: Allow
             priority: 1003
             direction: Inbound
-            source_address_prefix: '"{{ groups["loadBalancer"][0] }}/32"'
+            source_address_prefix: "0.0.0.0/0"
         -   name: grafana
             protocol: Tcp
             destination_port_range: 3000
             access: Allow
             priority: 1004
             direction: Inbound
-            source_address_prefix: '"{{ groups["loadBalancer"][0] }}/32"'
+            source_address_prefix: "{{ groups['loadBalancer'][0] }}/32"
         -   name: nginx-prometheus-exporter
             protocol: Tcp
             destination_port_range: 9113
             access: Allow
             priority: 1005
             direction: Inbound
-            source_address_prefix: '"{{ groups["loadBalancer"][0] }}/32"'
+            source_address_prefix: "0.0.0.0/0"
