--- a/ansible/roles/terminate_instances/tasks/remove_instance.yml
+++ b/ansible/roles/terminate_instances/tasks/remove_instance.yml
@@ -33,7 +33,7 @@
         name: "{{ item.name }}-Vnet"
         state: absent
 
--   name: Delete a secirity group
+-   name: Delete a security group
     azure_rm_securitygroup:
         resource_group: "{{ resource_group }}"
         name: "{{ item.name }}-sg"
