--- a/ansible/roles/10-first-minutes/tasks/main.yml
+++ b/ansible/roles/10-first-minutes/tasks/main.yml
@@ -26,6 +26,11 @@
       src: files/apt_periodic_50
       dest: /etc/apt/apt.conf.d/50unattended-upgrades
 
+- name: Copy sshd_config
+  copy:
+    src: files/sshd_config
+    dest: /etc/ssh/sshd_config
+
 - name: Create user
   user:
       name: "{{ server_user }}"
@@ -40,22 +45,6 @@
     state: present
     key: "{{ lookup('file', item) }}"
   with_items: "{{ pub_ssh_key_location }}"
-
-- name: Disallow root ssh access
-  lineinfile:
-    path: /etc/ssh/sshd_config
-    regexp: "^PermitRootLogin"
-    line: "PermitRootLogin no"
-    state: present
-  notify: Restart SSH
-
-- name: Disallow password authentication
-  lineinfile:
-    path: /etc/ssh/sshd_config
-    regexp: "^PasswordAuthentication"
-    line: "PasswordAuthentication no"
-    state: present
-  notify: Restart SSH
 
 - name: Add user to sudoers
   lineinfile:
