--- a/ansible/site.yml
+++ b/ansible/site.yml
@@ -7,3 +7,4 @@
 -   import_playbook: deploy_lb.yml
 -   import_playbook: deploy_db.yml
 -   import_playbook: deploy_app.yml
+-   import_playbook: deploy_monitoring.yml
