--- a/ansible/roles/security_groups/vars/main.yml
+++ b/ansible/roles/security_groups/vars/main.yml
@@ -29,7 +29,7 @@ sg_groups:
             access: Allow
             priority: 1004
             direction: Inbound
-            source_address_prefix: "{{ groups['monitoring'][0] }}/32"
+            source_address_prefix: "{{ groups['appServer'][0] }}/32"
     -   name: appServer
         port_rules:
         -   name: APP
@@ -91,4 +91,4 @@ sg_groups:
             access: Allow
             priority: 1004
             direction: Inbound
-            source_address_prefix: "{{ groups['loadBalancer'][0] }}/32"
+            source_address_prefix: "0.0.0.0/0"
